# GBAS-GUI

./: .gitignore  LICENSE  None  README.md  helpers.md  pyproject.toml
src/: Instructions.txt  run_gbas_CLI.py  run_gbas_gui.py  run_gbas_test.py
src/GBAS_package_sonnenbe/: main_CLI.py  main_CLI_testing.py  main_GUI.py
src/GBAS_package_sonnenbe/GUI_widgets/: PIC_calculation_widget.py  __init__.py  additional_params_widget.py  advanced_widget.py  allele_comparison_widget.py  data_prep_widget.py  database_widget.py  extract_subset_widget.py  general_params_widget.py  gui_helpers.py  status_widget.py
src/GBAS_package_sonnenbe/helper_functions/: calc_helpers.py  check_executables.py  convert_excel_to_json.py  filter_matrix.py  get_combatibility.py  input_checks.py  make_outputs.py  parse_executables.py  parse_fasta.py  parse_fastq.py  parse_primerfile.py  parse_rawdata.py  parse_samplefile.py  parse_write_parameters.py  timer_class.py  write_fasta.py  zip_unzip_file.py
src/GBAS_package_sonnenbe/main_functions/: PIC_calculation.py  PIC_calculation_backup.py  PIC_calculation_backup2.py  allele_calling.py  allele_determination.py  consensus_all.py  database_class.py  database_class_backup.py  demultiplexing.py  extract_lengths.py  extract_qualityscores.py  extract_qualityscores_backup.py  extract_qualityscores_backup2.py  genotype_likelihoods.py  genotype_likelihoods_advanced_implementation.py  genotype_likelihoods_advanced_implementation3.py  genotype_likelihoods_advanced_implementation4.py  genotype_likelihoods_advanced_implementation5.py  genotype_likelihoods_advanced_implementation6.py  genotype_likelihoods_advanced_implementation7.py  genotype_likelihoods_advanced_implementation8.py  genotype_likelihoods_clean.py  genotype_likelihoods_diploid.py  genotype_likelihoods_first_implementation.py  markerplots.py  markerplots_backup.py  markerstatistics.py  merging.py  trimmomatic.py
test_folder/: samples.txt
test_folder/inputs/: primers.txt
